WIP constants for string enums
